<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006491"

    tools:context="mainactivity.santiagolondono.com.dominos.Opciones">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">



    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="@string/Ing_nomb"
        android:id="@+id/nombre"
        android:textSize="30sp"
        android:textColor="#FFFFFFFF"
        android:textColorHint="#FFFFFFFF"
        />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="@string/Ing_lat"
        android:id="@+id/latitud"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFFFF"
        android:textColorHint="#FFFFFFFF"
        />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:hint="@string/Ing_lon"
            android:id="@+id/longitud"
            android:inputType="numberDecimal"
            android:textColor="#FFFFFFFF"
            android:textColorHint="#FFFFFFFF"
            />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Agregar"
            android:textStyle="bold"
            android:id="@+id/Bagregar"
            android:background="#006491"
            android:textColor="#FFFFFFFF"

            android:layout_gravity="center_horizontal"
            android:onClick="agregar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Eliminar"
            android:id="@+id/Beliminar"
            android:background="#006491"
            android:textStyle="bold"
            android:textColor="#FFFFFFFF"
            android:layout_gravity="center_horizontal"
            android:onClick="eliminar_sede"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Actualizar"
            android:id="@+id/Bactualizar"
            android:background="#006491"
            android:textStyle="bold"
            android:textColor="#FFFFFFFF"
            android:layout_gravity="center_horizontal"
            android:onClick="actualizar_sede"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ver_sedes"
            android:id="@+id/Bver"
            android:background="#006491"
            android:textColor="#FFFFFFFF"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:onClick="ver_sedes"/>

    </LinearLayout>

</FrameLayout>
